--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         </div>
 
         <div class="pdf-wrapper">
-            <iframe src="C:\Users\jonyy\Downloads\AIS lec 2 (Team Alex).pdf" class="pdf-viewer"
+            <iframe src="AIS lec 2 (Team Alex).pdf" class="pdf-viewer"
                 title="Yusuf's Portfolio"></iframe>
         </div>
     </div>
