--- a/index.html
+++ b/index.html
@@ -112,6 +112,13 @@
         </div>
 
         <div class="pdf-wrapper">
+            <p class="subtitle">AIS lec 1 (Team Alex)</p>
+            <iframe src="AIS lec 1 (Team Alex).pdf" class="pdf-viewer"
+                title="Yusuf's Portfolio"></iframe>
+        </div>
+
+        <div class="pdf-wrapper">
+            <p class="subtitle">AIS lec 2 (Team Alex)</p>
             <iframe src="AIS lec 2 (Team Alex).pdf" class="pdf-viewer"
                 title="Yusuf's Portfolio"></iframe>
         </div>
